--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -7,6 +7,16 @@
     "deviceTypes": [
       "phone"
     ],
+    "requestPermissions": [
+      {
+        "name": "ohos.permission.INTERNET" // 使用网络权限
+      },
+      {
+        "name": "ohos.permission.MICROPHONE",
+        "usedScene": {},
+        "reason": "$string:permission_micro_phone"
+      }
+    ],
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
@@ -43,7 +53,7 @@
             "name": "ohos.extension.backup",
             "resource": "$profile:backup_config"
           }
-        ],
+        ]
       }
     ]
   }
