--- a/entry/oh-package.json5
+++ b/entry/oh-package.json5
@@ -6,6 +6,6 @@
   "author": "",
   "license": "",
   "dependencies": {
-    "libentry.so": "file:./src/main/cpp/types/libentry"
+    "libyxpjsip.so": "file:./src/main/cpp/types/libentry"
   }
 }
