--- a/entry/src/main/module.json5
+++ b/entry/src/main/module.json5
@@ -20,6 +20,7 @@
     "deliveryWithInstall": true,
     "installationFree": false,
     "pages": "$profile:main_pages",
+    "routerMap": "$profile:router_map",
     "abilities": [
       {
         "name": "EntryAbility",
